media/bazarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: bazarr
  namespace: media
spec:
  ingressClassName: nginx
  rules:
    - host: bazarr.int.kyledev.co
      http:
        paths:
          - backend:
              service:
                name: bazarr
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - bazarr.int.kyledev.co
      secretName: bazarr-kyledev-tls-prod
