media/bazarr/securitypolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: bazarr
  namespace: bazarr
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: bazarr
  extAuth:
    grpc:
      backendRefs:
        - group: ""
          kind: Service
          name: test-envoy-proxy-bouncer
          port: 8080
          namespace: envoy-gateway-system
